--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "expo-constants": "~16.0.2",
     "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "expo-dev-client": "~4.0.18"
+    "expo-dev-client": "~4.0.18",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
